# meta-ads-scraper

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: exchange.rs  lib.rs  version.rs
core/src/client/: mod.rs  request.rs
core/src/model/: attributes.rs  library.rs  mod.rs
core/src/token/: mod.rs
