[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/meta-ads-archive"
repository = "https://github.com/travisbrown/meta-ads-archive"
keywords = ["facebook", "meta", "scraper"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
bounded-static = "0.8"
bounded-static-derive-more = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cli-helpers = "0.1"
csv = "1"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["cookies", "json"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9", features = ["preserve_order"] }
urlencoding = "2"
